test/failing/positive/i217-reference-to-nested.cfr
car *
   engine
   radio

allEngines -> engine *